# report-service

./: .gitignore  README.md  main.py  pyproject.toml
api/: dependencies.py
api/routers/: report_router.py
application/use_cases/: generate_report.py
domain/constans/: verb_ending.py
domain/entities/: word_statistics.py
domain/services/: lemmatizer.py  text_analyzer.py
domain/value_objects/: line_number.py  word.py
infrastructure/: error_handlers.py
infrastructure/file_readers/: async_file_reader.py
infrastructure/repositories/: excel_report_repository.py
